[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Patrick Rodrigues <pythrick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.63.0", extras = ["all"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
